Keep IP asset edits on list view

--- a/app/templates/ip_assets_list.html
+++ b/app/templates/ip_assets_list.html
@@ -135,6 +135,7 @@
   </div>
   <div class="ip-drawer-body">
     <form class="ip-drawer-form" method="post" data-ip-edit-form id="ip-edit-form">
+      <input type="hidden" name="return_to" value="{{ return_to }}">
       <section class="ip-drawer-section">
         <h3>Assignment</h3>
         <label class="field">
